--- a/prepros.config
+++ b/prepros.config
@@ -967,6 +967,12 @@
         }
       },
       {
+        "file": "css/scss/pds-penerima.scss",
+        "config": {
+          "customOutput": "css/pds-penerima.css"
+        }
+      },
+      {
         "file": "css/scss/pds-publikasi.scss",
         "config": {
           "customOutput": "css/pds-publikasi.css",
